tests/qd/compile_errors/stack_underflow.qd
// Test: stack underflow - not enough values for operation

fn main() {
	add  // needs 2 values, has 0
}
